# cargo-with

./: .gitignore  .travis.yml  Cargo.toml  README.md
example_projects/benchmark/: Cargo.toml  run.sh
example_projects/benchmark/src/: lib.rs
example_projects/simple-binary/: Cargo.toml  run.sh
example_projects/simple-binary/src/: main.rs
example_projects/simple-library/: Cargo.toml  run.sh
src/: cargo.rs  cargo_command.rs  lib.rs  main.rs  runner.rs  with_command.rs
src/tests/: cargo_output_lib
