[package]
name = "cargo-with"
version = "0.3.0"
edition = "2018"
authors = [
	"cbourjau <christianb@posteo.de>",
	"Ole Martin Ruud <barskern@outlook.com>",
]
categories = [
    "development-tools",
    "development-tools::cargo-plugins",
]
description = "A third-party cargo extension to run the build artifacts through tools like `gdb`."
documentation = "https://github.com/cbourjau/cargo-with/blob/master/README.md"
homepage = "https://github.com/cbourjau/cargo-with/"
keywords = [
    "cargo",
    "cargo-subcommand",
    "cli",
    "dependencies",
    "crates",
]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/cbourjau/cargo-with"


[dependencies]
clap = "2.32"
env_logger = "0.6.0"
failure = "0.1.3"
log = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
